# HackAI_Hack-230536

./: .gitignore  Readme.md  env_sample  pyproject.toml
src/: main.py
src/util/: getTemp.py  notify.py
